k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
    track: stable
    version: v1 # Add this line
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        track: stable
        version: v1 # Add this line
    spec:
      containers:
      - name: frontend-container
        image: kamran7777777/frontend-image:latest
        ports:
        - containerPort: 80
