k8s/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-test-branch
  namespace: frontend
  labels:
    app: frontend
    track: canary
    version: v1 # Add this line
spec:
  replicas: 1  # Start with 1 replica for the canary
  selector:
    matchLabels:
      app: frontend
      track: canary
  template:
    metadata:
      labels:
        app: frontend
        track: canary
        version: v1 # Add this line
    spec:
      containers:
      - name: frontend-container
        image: kamran7777777/frontend-image-test:latest
        ports:
        - containerPort: 80
