k8s/frontend-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-virtualservice
  namespace: frontend
spec:
  hosts:
  - "user.k8s.dearsoft.tech" # Your actual domain
  http:
  - route:
    - destination:
        host: frontend-service
        subset: stable
      weight: 90
    - destination:
        host: frontend-service
        subset: canary
      weight: 10
